pass the rope down in the view, moving the work of turning it into a string onto the main thread, wit hthe hopes of being able to eliminate some of the work later

--- a/libs/editor/Cargo.toml
+++ b/libs/editor/Cargo.toml
@@ -21,7 +21,7 @@ path = "libs/editor_types"
 path = "../if_changed"
 
 [dependencies.panic_safe_rope]
-path = "libs/panic_safe_rope"
+path = "../panic_safe_rope"
 
 [dependencies.perf_viz]
 path = "../perf_viz"
