--- a/libs/editor/libs/rope_pos/Cargo.toml
+++ b/libs/editor/libs/rope_pos/Cargo.toml
@@ -16,7 +16,7 @@ path = "../editor_types"
 path = "../../../macros"
 
 [dependencies.panic_safe_rope]
-path = "../panic_safe_rope"
+path = "../../../panic_safe_rope"
 
 [dependencies.perf_viz]
 path = "../../../perf_viz"
