--- a/libs/editor/libs/search/Cargo.toml
+++ b/libs/editor/libs/search/Cargo.toml
@@ -13,7 +13,7 @@ path= "./src/search.rs"
 path = "../../../macros"
 
 [dependencies.panic_safe_rope]
-path = "../panic_safe_rope"
+path = "../../../panic_safe_rope"
 
 [dependencies.perf_viz]
 path = "../../../perf_viz"
