--- a/libs/panic_safe_rope/Cargo.toml
+++ b/libs/panic_safe_rope/Cargo.toml
@@ -11,16 +11,16 @@ path = "./src/panic_safe_rope.rs"
 ropey = "1.1.0"
 
 [dependencies.check_or_no_panic]
-path = "../../../check_or_no_panic"
+path = "../check_or_no_panic"
 
-[dependencies.editor_types]
-path = "../editor_types"
+[dependencies.text_pos]
+path = "../text_pos"
 
 [dependencies.macros]
-path = "../../../macros"
+path = "../macros"
 
 [dev-dependencies]
-proptest = "0.9.3"
+proptest = "0.9"
 
 [features]
 default = []
