--- a/libs/platform_types/Cargo.toml
+++ b/libs/platform_types/Cargo.toml
@@ -10,8 +10,10 @@ path = "./src/platform_types.rs"
 [dependencies]
 vec1 = "1.4"
 g_i = { path = "./libs/g_i" }
+panic_safe_rope = { path = "../panic_safe_rope" }
 macros = { path = "../macros" }
 move_mod = { path = "./libs/move_mod" }
+text_pos = { path = "../text_pos" }
 proptest = { version = "0.9.5", optional = true }
 arb_macros = { path = "../arb_macros", optional = true }
 pub_arb_g_i = { path = "../pub_arb/g_i", optional = true }
