add tests that test a different, but still edit_transition related property, and make them pass by clearing the vec

--- a/libs/editor/libs/text_buffer/Cargo.toml
+++ b/libs/editor/libs/text_buffer/Cargo.toml
@@ -45,4 +45,5 @@ pub_arb_std = { path = "../../../pub_arb/std" }
 
 [features]
 default = []
+extra-prints = []
 pub_arb = ["proptest", "pretty_assertions", "pub_arb_std"]
