--- a/libs/editor/Cargo.toml
+++ b/libs/editor/Cargo.toml
@@ -66,7 +66,7 @@ path = "../pub_arb/std"
 [features]
 default = []
 invariant-checking = ["check_or_no_panic/invariant-checking"]
-extra-prints = []
+extra-prints = ["text_buffer/extra-prints"]
 
 [[bench]]
 name = "user_input"
