reduce down the copy of editor.rs a bunch more while preserving the strange test bug

--- a/test-bug-reduction/libs/editor/Cargo.toml
+++ b/test-bug-reduction/libs/editor/Cargo.toml
@@ -18,6 +18,9 @@ path = "libs/editor_types"
 [dependencies.if_changed]
 path = "../if_changed"
 
+[dependencies.rope_pos]
+path = "libs/rope_pos"
+
 [dependencies.panic_safe_rope]
 path = "../panic_safe_rope"
 
