--- a/libs/platform_types/Cargo.toml
+++ b/libs/platform_types/Cargo.toml
@@ -28,4 +28,5 @@ pub_arb_std = { path = "../pub_arb/std"}
 
 [features]
 default = []
+extra-prints = []
 pub_arb = ["pub_arb_g_i", "pub_arb_std", "arb_macros", "proptest"]
