--- a/libs/editor/Cargo.toml
+++ b/libs/editor/Cargo.toml
@@ -63,6 +63,9 @@ path = "../pub_arb/text_buffer"
 [dev-dependencies.pub_arb_std]
 path = "../pub_arb/std"
 
+[dev-dependencies.pub_arb_non_neg_f32]
+path = "../pub_arb/non_neg_f32"
+
 [features]
 default = []
 invariant-checking = ["check_or_no_panic/invariant-checking"]
