add pos_f32 module, and discover that the panic safe rope tests suddenly fail So far I have only run the tests for this version of the code on linux. I was previously using Windows and they passed there before. It's possible that the files got messed up by git trying to convert line endings for the given platform I guess?

--- a/libs/editor/Cargo.toml
+++ b/libs/editor/Cargo.toml
@@ -63,6 +63,9 @@ path = "../pub_arb/text_buffer"
 [dev-dependencies.pub_arb_std]
 path = "../pub_arb/std"
 
+[dev-dependencies.pub_arb_pos_f32]
+path = "../pub_arb/pos_f32"
+
 [dev-dependencies.pub_arb_non_neg_f32]
 path = "../pub_arb/non_neg_f32"
 
