--- a/libs/platform_types/libs/pos_f32/Cargo.toml
+++ b/libs/platform_types/libs/pos_f32/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
-name = "non_neg_f32"
+name = "pos_f32"
 version = "0.1.0"
-authors = ["Ryan1729 <ryan1729@gmail.com>"]
+authors = ["Ryan1729 <Ryan1729@gmail.com>"]
 edition = "2018"
 
 [lib]
-path = "./src/non_neg_f32.rs"
+path = "./src/pos_f32.rs"
 
 [dependencies]
-pos_f32 = { path = "../pos_f32" }
 macros = { path = "../../../macros" }
 proptest = { version = "0.9", optional = true }
 
