--- a/libs/platform_types/Cargo.toml
+++ b/libs/platform_types/Cargo.toml
@@ -9,6 +9,7 @@ path = "./src/platform_types.rs"
 
 [dependencies]
 vec1 = "1.4"
+f32_0_1 = { path = "./libs/f32_0_1" }
 g_i = { path = "./libs/g_i" }
 panic_safe_rope = { path = "../panic_safe_rope" }
 perf_viz = { path = "../perf_viz" }
@@ -19,6 +20,7 @@ non_neg_f32 = { path = "./libs/non_neg_f32" }
 text_pos = { path = "../text_pos" }
 proptest = { version = "0.9.5", optional = true }
 arb_macros = { path = "../arb_macros", optional = true }
+pub_arb_f32_0_1 = { path = "../pub_arb/f32_0_1", optional = true }
 pub_arb_g_i = { path = "../pub_arb/g_i", optional = true }
 pub_arb_pos_f32 = { path = "../pub_arb/pos_f32", optional = true }
 pub_arb_non_neg_f32 = { path = "../pub_arb/non_neg_f32", optional = true }
@@ -35,4 +37,4 @@ pub_arb_std = { path = "../pub_arb/std" }
 [features]
 default = []
 extra-prints = []
-pub_arb = ["pub_arb_g_i", "pub_arb_pos_f32", "pub_arb_non_neg_f32", "pub_arb_std", "arb_macros", "proptest"]
+pub_arb = ["pub_arb_g_i", "pub_arb_f32_0_1", "pub_arb_pos_f32", "pub_arb_non_neg_f32", "pub_arb_std", "arb_macros", "proptest"]
