remove a debug print that was cauing slowness, and try to optimize the layout to not be O(total lines) and find that I need to go slower.

--- a/libs/platform_layer/libs/wimp/wimp_types/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/wimp_types/Cargo.toml
@@ -9,6 +9,7 @@ path = "./src/wimp_types.rs"
 
 [dependencies]
 macros = { path = "../../../../macros" }
+perf_viz = { path = "../../../../perf_viz" }
 platform_types = { path = "../../../../platform_types" }
 shared = { path = "../shared" }
 clipboard = "0.5.0"
