Start really doing the layout myself, in order to later optimize `nth` and find the tests failing for an currently unknown reason. It breifly seemed like the line height was supposed to be different per line depending on the presence of ascenders and descenders, but I currently suspect that only matters for multiple scales, since implementing that did not solve the problem. Although... it did make the tests fail with different values. Needs more investigation.

--- a/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/Cargo.toml
@@ -15,6 +15,7 @@ glyph_brush = {path = "./libs/glyph-brush"}
 glyph_brush_layout = "0.1.9"
 rusttype = "0.8"
 macros = { path = "../../../../../../macros" }
+panic_safe_rope = { path = "../../../../../../panic_safe_rope" }
 perf_viz = { path = "../../../../../../perf_viz" }
 platform_types = { path = "../../../../../../platform_types" }
 
