--- a/libs/editor/Cargo.toml
+++ b/libs/editor/Cargo.toml
@@ -66,6 +66,9 @@ path = "../pub_arb/std"
 [dev-dependencies.pub_arb_pos_f32]
 path = "../pub_arb/pos_f32"
 
+[dev-dependencies.pub_arb_pos_f32_trunc]
+path = "../pub_arb/pos_f32_trunc"
+
 [dev-dependencies.pub_arb_non_neg_f32]
 path = "../pub_arb/non_neg_f32"
 
