--- a/libs/platform_types/Cargo.toml
+++ b/libs/platform_types/Cargo.toml
@@ -14,6 +14,7 @@ g_i = { path = "./libs/g_i" }
 panic_safe_rope = { path = "../panic_safe_rope" }
 perf_viz = { path = "../perf_viz" }
 pos_f32 = { path = "./libs/pos_f32" }
+pos_f32_trunc = { path = "./libs/pos_f32_trunc" }
 macros = { path = "../macros" }
 move_mod = { path = "./libs/move_mod" }
 non_neg_f32 = { path = "./libs/non_neg_f32" }
@@ -23,6 +24,7 @@ arb_macros = { path = "../arb_macros", optional = true }
 pub_arb_f32_0_1 = { path = "../pub_arb/f32_0_1", optional = true }
 pub_arb_g_i = { path = "../pub_arb/g_i", optional = true }
 pub_arb_pos_f32 = { path = "../pub_arb/pos_f32", optional = true }
+pub_arb_pos_f32_trunc = { path = "../pub_arb/pos_f32_trunc", optional = true }
 pub_arb_non_neg_f32 = { path = "../pub_arb/non_neg_f32", optional = true }
 pub_arb_std = { path = "../pub_arb/std", optional = true }
 
@@ -31,10 +33,11 @@ proptest = { version = "0.9.5" }
 arb_macros = { path = "../arb_macros" }
 pub_arb_g_i = { path = "../pub_arb/g_i" }
 pub_arb_pos_f32 = { path = "../pub_arb/pos_f32" }
+pub_arb_pos_f32_trunc = { path = "../pub_arb/pos_f32_trunc" }
 pub_arb_non_neg_f32 = { path = "../pub_arb/non_neg_f32" }
 pub_arb_std = { path = "../pub_arb/std" }
 
 [features]
 default = []
 extra-prints = []
-pub_arb = ["pub_arb_g_i", "pub_arb_f32_0_1", "pub_arb_pos_f32", "pub_arb_non_neg_f32", "pub_arb_std", "arb_macros", "proptest"]
+pub_arb = ["pub_arb_g_i", "pub_arb_f32_0_1", "pub_arb_pos_f32", "pub_arb_pos_f32_trunc", "pub_arb_non_neg_f32", "pub_arb_std", "arb_macros", "proptest"]
