--- a/libs/platform_layer/libs/wimp/gl_layer/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/gl_layer/Cargo.toml
@@ -18,7 +18,7 @@ shared = { path = "../shared" }
 
 [dev-dependencies]
 # for the example(s)
-glutin = "0.22.0-alpha1"
+glutin = "0.24.0"
 spin_sleep = "0.3"
 
 [features]
