--- a/libs/platform_types/Cargo.toml
+++ b/libs/platform_types/Cargo.toml
@@ -31,6 +31,7 @@ pub_arb_std = { path = "../pub_arb/std", optional = true }
 [dev-dependencies]
 proptest = { version = "0.9.5" }
 arb_macros = { path = "../arb_macros" }
+pub_arb_f32_0_1 = { path = "../pub_arb/f32_0_1" }
 pub_arb_g_i = { path = "../pub_arb/g_i" }
 pub_arb_pos_f32 = { path = "../pub_arb/pos_f32" }
 pub_arb_pos_f32_trunc = { path = "../pub_arb/pos_f32_trunc" }
