--- a/libs/platform_types/Cargo.toml
+++ b/libs/platform_types/Cargo.toml
@@ -9,6 +9,7 @@ path = "./src/platform_types.rs"
 
 [dependencies]
 vec1 = "1.4"
+abs_pos = { path = "./libs/abs_pos" }
 f32_0_1 = { path = "./libs/f32_0_1" }
 g_i = { path = "./libs/g_i" }
 panic_safe_rope = { path = "../panic_safe_rope" }
@@ -19,8 +20,9 @@ macros = { path = "../macros" }
 move_mod = { path = "./libs/move_mod" }
 non_neg_f32 = { path = "./libs/non_neg_f32" }
 text_pos = { path = "../text_pos" }
-proptest = { version = "0.9.5", optional = true }
+proptest = { version = "0.9", optional = true }
 arb_macros = { path = "../arb_macros", optional = true }
+#pub_arb_abs_pos = { path = "../pub_arb/abs_pos", optional = true }
 pub_arb_f32_0_1 = { path = "../pub_arb/f32_0_1", optional = true }
 pub_arb_g_i = { path = "../pub_arb/g_i", optional = true }
 pub_arb_pos_f32 = { path = "../pub_arb/pos_f32", optional = true }
