--- a/libs/platform_types/libs/abs/Cargo.toml
+++ b/libs/platform_types/libs/abs/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "abs_pos"
+name = "abs"
 version = "0.1.0"
 authors = ["Ryan1729 <Ryan1729@gmail.com>"]
 edition = "2018"
 
 [lib]
-path = "./src/abs_pos.rs"
+path = "./src/abs.rs"
 
 [dependencies]
 macros = { path = "../../../macros" }
