Get tests compiling, and decide we need to change how the tab visiblity is checked

--- a/libs/platform_layer/libs/wimp/wimp_render/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/wimp_render/Cargo.toml
@@ -17,7 +17,8 @@ platform_types = { path = "../../../../platform_types" }
 macros = { path = "../../../../macros" }
 
 [dev-dependencies]
-proptest = "0.9.3"
+pub_arb_abs = { path = "../../../../pub_arb/abs" }
+proptest = "0.9"
 
 [features]
 clip-debugging = []
