--- a/libs/platform_layer/libs/wimp/wimp_types/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/wimp_types/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 path = "./src/wimp_types.rs"
 
 [dependencies]
+if_changed = { path = "../../../../if_changed" }
 macros = { path = "../../../../macros" }
 perf_viz = { path = "../../../../perf_viz" }
 platform_types = { path = "../../../../platform_types" }
