--- a/libs/panic_safe_rope/Cargo.toml
+++ b/libs/panic_safe_rope/Cargo.toml
@@ -10,9 +10,6 @@ path = "./src/panic_safe_rope.rs"
 [dependencies]
 ropey = "1.1.0"
 
-[dependencies.check_or_no_panic]
-path = "../check_or_no_panic"
-
 [dependencies.text_pos]
 path = "../text_pos"
 
@@ -24,4 +21,4 @@ proptest = "0.10"
 
 [features]
 default = []
-invariant-checking = ["check_or_no_panic/invariant-checking"]
+invariant-checking = []
