move unbounded layout code out of glyph_brush_layout and into text_rendering
context: glyph_brush has stopped using rusttype and started using a new library callede ab_glyph and has made other API changes.

At this point I;m unsure whether I want to update to the new version of glyph_brush, or just use ab_glyph directly.
If I use glyph_brush, then I would need to either hack in rectangles again to keep the cache in sync, or figure out a way to insert rectangles in after the fact and/or manage the cache from outside.

--- a/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/Cargo.toml
@@ -12,7 +12,7 @@ path = "./src/text_rendering.rs"
 [dependencies]
 gl_layer_types = {path = "../gl_layer_types"}
 glyph_brush = {path = "./libs/glyph-brush"}
-glyph_brush_layout = "0.1.9"
+glyph_brush_layout = {path = "./libs/glyph-brush-layout"}
 rusttype = "0.8"
 macros = { path = "../../../../../../macros" }
 panic_safe_rope = { path = "../../../../../../panic_safe_rope" }
