remove unneeded parts including WrapInRect

--- a/libs/platform_types/libs/abs/Cargo.toml
+++ b/libs/platform_types/libs/abs/Cargo.toml
@@ -9,6 +9,7 @@ path = "./src/abs.rs"
 
 [dependencies]
 macros = { path = "../../../macros" }
+perf_viz = { path = "../../../perf_viz" }
 proptest = { version = "0.10", optional = true }
 
 [dev-dependencies]
