pull out some self-contained crates

--- a/libs/panic_safe_rope/Cargo.toml
+++ b/libs/panic_safe_rope/Cargo.toml
@@ -10,6 +10,9 @@ path = "./src/panic_safe_rope.rs"
 [dependencies]
 ropey = "1.1.0"
 
+[dependencies.is_linebreak_char]
+path = "../is_linebreak_char"
+
 [dependencies.text_pos]
 path = "../text_pos"
 
