--- a/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/Cargo.toml
@@ -13,6 +13,7 @@ path = "./src/text_rendering.rs"
 gl_layer_types = {path = "../gl_layer_types"}
 glyph_brush = {path = "./libs/glyph-brush"}
 glyph_brush_layout = {path = "./libs/glyph-brush-layout"}
+linebreak = {path = "./libs/linebreak"}
 rusttype = "0.8"
 macros = { path = "../../../../../../macros" }
 panic_safe_rope = { path = "../../../../../../panic_safe_rope" }
