pull out screen_space crate so text_rendering doesn't need to rely on platform_types
We plan to move some modules from text_rendering to glyph_brush, so we don't want to make that depend on all of platform_types

--- a/libs/abs/Cargo.toml
+++ b/libs/abs/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2018"
 path = "./src/abs.rs"
 
 [dependencies]
-macros = { path = "../../../macros" }
-perf_viz = { path = "../../../perf_viz" }
+macros = { path = "../macros" }
+perf_viz = { path = "../perf_viz" }
 proptest = { version = "0.10", optional = true }
 
 [dev-dependencies]
