--- a/libs/platform_types/Cargo.toml
+++ b/libs/platform_types/Cargo.toml
@@ -9,7 +9,7 @@ path = "./src/platform_types.rs"
 
 [dependencies]
 vec1 = "1.4"
-abs = { path = "./libs/abs" }
+abs = { path = "../abs" }
 f32_0_1 = { path = "./libs/f32_0_1" }
 g_i = { path = "./libs/g_i" }
 panic_safe_rope = { path = "../panic_safe_rope" }
@@ -19,6 +19,7 @@ pos_f32_trunc = { path = "./libs/pos_f32_trunc" }
 macros = { path = "../macros" }
 move_mod = { path = "./libs/move_mod" }
 non_neg_f32 = { path = "./libs/non_neg_f32" }
+screen_space = { path = "../screen_space" }
 text_pos = { path = "../text_pos" }
 proptest = { version = "0.10", optional = true }
 arb_macros = { path = "../arb_macros", optional = true }
