rearrange crates in preparation for adding `acknowledge_edit` calls inside text_buffer

--- a/libs/editor/libs/parsers/Cargo.toml
+++ b/libs/editor/libs/parsers/Cargo.toml
@@ -19,6 +19,9 @@ path = "../../../macros"
 [dependencies.platform_types]
 path = "../../../platform_types"
 
+[dependencies.edit]
+path = "../edit"
+
 [dev-dependencies]
 proptest = "0.10"
 
