--- a/libs/editor/libs/text_buffer/Cargo.toml
+++ b/libs/editor/libs/text_buffer/Cargo.toml
@@ -7,6 +7,12 @@ edition = "2018"
 [lib]
 path = "./src/text_buffer.rs"
 
+[dependencies.cursors]
+path = "../cursors"
+
+[dependencies.edit]
+path = "../edit"
+
 [dependencies.editor_types]
 path = "../editor_types"
 
@@ -15,6 +21,9 @@ path = "../../../if_changed"
 
 [dependencies.macros]
 path = "../../../macros"
+
+[dependencies.move_cursor]
+path = "../move_cursor"
 
 [dependencies.panic_safe_rope]
 path = "../../../panic_safe_rope"
@@ -32,8 +41,7 @@ path = "../rope_pos"
 path = "../search"
 
 [dependencies]
-regex = "1.1.9"
-lazy_static = "1.3.0"
+regex = "1"
 proptest = { version = "0.10", optional = true }
 pretty_assertions = { version = "0.6.1", optional = true }
 pub_arb_std = { path = "../../../pub_arb/std", optional = true }
