add in parameter to a bunch of text_buffer methods, because that seem easier than adding lifetime parameters to every instance of `TextBuffer`

--- a/libs/editor/libs/text_buffer/Cargo.toml
+++ b/libs/editor/libs/text_buffer/Cargo.toml
@@ -28,6 +28,9 @@ path = "../move_cursor"
 [dependencies.panic_safe_rope]
 path = "../../../panic_safe_rope"
 
+[dependencies.parsers]
+path = "../parsers"
+
 [dependencies.perf_viz]
 path = "../../../perf_viz"
 
