--- a/libs/editor/libs/parsers/Cargo.toml
+++ b/libs/editor/libs/parsers/Cargo.toml
@@ -13,14 +13,17 @@ cc = "1.0"
 [dependencies]
 tree-sitter = "0.16.1"
 
+[dependencies.edit]
+path = "../edit"
+
 [dependencies.macros]
 path = "../../../macros"
 
+[dependencies.perf_viz]
+path = "../../../perf_viz"
+
 [dependencies.platform_types]
 path = "../../../platform_types"
-
-[dependencies.edit]
-path = "../edit"
 
 [dev-dependencies]
 proptest = "0.10"
