--- a/libs/platform_types/Cargo.toml
+++ b/libs/platform_types/Cargo.toml
@@ -22,27 +22,11 @@ non_neg_f32 = { path = "./libs/non_neg_f32" }
 screen_space = { path = "../screen_space" }
 text_pos = { path = "../text_pos" }
 proptest = { version = "0.10", optional = true }
-arb_macros = { path = "../arb_macros", optional = true }
-pub_arb_abs = { path = "../pub_arb/abs", optional = true }
-pub_arb_f32_0_1 = { path = "../pub_arb/f32_0_1", optional = true }
-pub_arb_g_i = { path = "../pub_arb/g_i", optional = true }
-pub_arb_pos_f32 = { path = "../pub_arb/pos_f32", optional = true }
-pub_arb_pos_f32_trunc = { path = "../pub_arb/pos_f32_trunc", optional = true }
-pub_arb_non_neg_f32 = { path = "../pub_arb/non_neg_f32", optional = true }
-pub_arb_std = { path = "../pub_arb/std", optional = true }
 
 [dev-dependencies]
 proptest = { version = "0.10" }
-arb_macros = { path = "../arb_macros" }
-pub_arb_abs = { path = "../pub_arb/abs" }
-pub_arb_f32_0_1 = { path = "../pub_arb/f32_0_1" }
-pub_arb_g_i = { path = "../pub_arb/g_i" }
-pub_arb_pos_f32 = { path = "../pub_arb/pos_f32" }
-pub_arb_pos_f32_trunc = { path = "../pub_arb/pos_f32_trunc" }
-pub_arb_non_neg_f32 = { path = "../pub_arb/non_neg_f32" }
-pub_arb_std = { path = "../pub_arb/std" }
 
 [features]
 default = []
 extra-prints = []
-pub_arb = ["pub_arb_g_i", "pub_arb_f32_0_1", "pub_arb_abs", "pub_arb_pos_f32", "pub_arb_pos_f32_trunc", "pub_arb_non_neg_f32", "pub_arb_std", "arb_macros", "proptest"]
+pub_arb = []
