--- a/libs/editor/libs/cursors/Cargo.toml
+++ b/libs/editor/libs/cursors/Cargo.toml
@@ -27,12 +27,16 @@ path = "../../../vec1"
 
 [dependencies]
 proptest = { version = "0.10", optional = true }
+pub_arb_platform_types = { path = "../../../pub_arb/platform_types", optional = true }
+pub_arb_text_pos = { path = "../../../pub_arb/text_pos", optional = true }
 pub_arb_vec1 = { path = "../../../pub_arb/vec1", optional = true }
 
 [dev-dependencies]
 proptest = "0.10"
+pub_arb_platform_types = { path = "../../../pub_arb/platform_types" }
+pub_arb_text_pos = { path = "../../../pub_arb/text_pos" }
 pub_arb_vec1 = { path = "../../../pub_arb/vec1" }
 
 [features]
 default = []
-pub_arb = ["pub_arb_vec1"]
+pub_arb = ["proptest", "pub_arb_platform_types", "pub_arb_text_pos", "pub_arb_vec1"]
