--- a/libs/editor/libs/text_buffer/Cargo.toml
+++ b/libs/editor/libs/text_buffer/Cargo.toml
@@ -47,14 +47,22 @@ path = "../search"
 regex = "1"
 proptest = { version = "0.10", optional = true }
 pretty_assertions = { version = "0.6.1", optional = true }
+pub_arb_cursors = { path = "../../../pub_arb/cursors", optional = true }
+pub_arb_edit = { path = "../../../pub_arb/edit", optional = true }
 pub_arb_std = { path = "../../../pub_arb/std", optional = true }
+pub_arb_text_pos = { path = "../../../pub_arb/text_pos", optional = true }
+pub_arb_vec1 = { path = "../../../pub_arb/vec1", optional = true }
 
 [dev-dependencies]
 proptest = "0.10"
 pretty_assertions = "0.6.1"
+pub_arb_cursors = { path = "../../../pub_arb/cursors" }
+pub_arb_edit = { path = "../../../pub_arb/edit" }
 pub_arb_std = { path = "../../../pub_arb/std" }
+pub_arb_text_pos = { path = "../../../pub_arb/text_pos" }
+pub_arb_vec1 = { path = "../../../pub_arb/vec1" }
 
 [features]
 default = []
 extra-prints = []
-pub_arb = ["proptest", "pretty_assertions", "pub_arb_std"]
+pub_arb = ["proptest", "pretty_assertions", "pub_arb_cursors", "pub_arb_edit", "pub_arb_std", "pub_arb_text_pos", "pub_arb_vec1"]
