--- a/libs/editor/libs/edit/Cargo.toml
+++ b/libs/editor/libs/edit/Cargo.toml
@@ -31,6 +31,9 @@ path = "../../../platform_types"
 [dependencies.rope_pos]
 path = "../rope_pos"
 
+[dependencies.vec1]
+path = "../../../vec1"
+
 [dependencies]
 proptest = { version = "0.10", optional = true }
 pub_arb_cursors = { path = "../../../pub_arb/cursors", optional = true }
