--- a/libs/vec1/Cargo.toml
+++ b/libs/vec1/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Ryan1729 <Ryan1729@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-vec1 = "1.4"
+vec1_external = { version = "1.4", package = "vec1" }
 proptest = { version = "0.10", optional = true }
 
 [dev-dependencies]
