--- a/libs/editor/Cargo.toml
+++ b/libs/editor/Cargo.toml
@@ -51,6 +51,9 @@ proptest = "0.10"
 [dev-dependencies.arb_macros]
 path = "../arb_macros"
 
+[dev-dependencies.pub_arb_g_i]
+path = "../pub_arb/g_i"
+
 [dev-dependencies.pub_arb_platform_types]
 path = "../pub_arb/platform_types"
 
