--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ path = "./libs/platform_layer"
 [features]
 default = []
 disable-fade-alpha = ["platform_layer/disable-fade-alpha"]
+no-spinning-sleep = ["platform_layer/no-spinning-sleep"]
+skip-updating-editor-thread = ["platform_layer/skip-updating-editor-thread"]
 invariant-checking = ["platform_layer/invariant-checking", "editor/invariant-checking"]
 time-render = ["platform_layer/time-render"]
 flame-chart = ["perf_viz/flame-chart"]
