--- a/libs/platform_layer/libs/wimp/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/Cargo.toml
@@ -31,6 +31,8 @@ directories = "2.0"
 [features]
 default = []
 disable-fade-alpha = ["wimp_types/disable-fade-alpha"]
+no-spinning-sleep = []
+skip-updating-editor-thread = []
 invariant-checking = ["wimp_render/invariant-checking"]
 time-render = ["gl_layer/time-render"]
 extra-prints = ["shared/extra-prints"]
