--- a/libs/platform_types/libs/g_i/Cargo.toml
+++ b/libs/platform_types/libs/g_i/Cargo.toml
@@ -8,17 +8,18 @@ edition = "2018"
 path = "./src/g_i.rs"
 
 [dependencies]
-perf_viz = { path = "../../../perf_viz" }
-macros = { path = "../../../macros" }
 move_mod = { path = "../move_mod" }
 mut_methods = { path = "./libs/mut_methods" }
 proptest = { version = "0.10", optional = true }
-vec1 = { path = "../../../vec1" }
 arb_macros = { path = "../../../arb_macros", optional = true }
+fast_hash = { path = "../../../fast_hash", optional = true }
+perf_viz = { path = "../../../perf_viz" }
+macros = { path = "../../../macros" }
+vec1 = { path = "../../../vec1" }
 
 [dev-dependencies]
 
 
 [features]
-default = []
+default = ["fast_hash"]
 pub_arb = ["proptest", "arb_macros"]
