--- a/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/libs/glyph-brush/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/libs/glyph-brush/Cargo.toml
@@ -13,7 +13,7 @@ readme="README.md"
 log = "0.4.4"
 ordered-float = "1"
 full_rusttype = { version = "0.8.3", features = ["gpu_cache"], package = "rusttype" }
-rustc-hash = "1"
+fast_hash = { path = "../../../../../../../../fast_hash" }
 perf_viz = { path = "../../../../../../../../perf_viz" }
 if_changed = { path = "../../../../../../../../if_changed" }
 
