start caching spans based on hash of to-be-parsed data, and add perf_viz annotations

--- a/libs/panic_safe_rope/Cargo.toml
+++ b/libs/panic_safe_rope/Cargo.toml
@@ -19,6 +19,9 @@ path = "../text_pos"
 [dependencies.macros]
 path = "../macros"
 
+[dependencies.perf_viz]
+path = "../perf_viz"
+
 [dev-dependencies]
 proptest = "0.10"
 
