--- a/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/libs/glyph-brush/libs/rasterizer/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/libs/glyph-brush/libs/rasterizer/Cargo.toml
@@ -8,4 +8,7 @@ edition = "2018"
 path = "./src/rasterizer.rs"
 
 [dependencies]
-rusttype = { version = "0.8.3", features = ["gpu_cache"] }
+rusttype = { version = "0.8.3", features = ["gpu_cache"], optional = true }
+
+[features]
+ab_glyph = []
