--- a/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/libs/glyph-brush/libs/rasterizer/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/libs/glyph-brush/libs/rasterizer/Cargo.toml
@@ -9,6 +9,4 @@ path = "./src/rasterizer.rs"
 
 [dependencies]
 rusttype = { version = "0.8.3", features = ["gpu_cache"], optional = true }
-
-[features]
-ab_glyph = []
+glyph_brush_draw_cache = { version = "0.1.1", optional = true }
