--- a/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/libs/glyph-brush/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/libs/glyph-brush/Cargo.toml
@@ -13,8 +13,8 @@ readme="README.md"
 path = "./src/glyph_brush.rs"
 
 [dependencies]
-rasterizer = { path = "./libs/rasterizer", features = ["glyph_brush_draw_cache"] }
-#rasterizer = { path = "./libs/rasterizer", features = ["rusttype"] }
+#rasterizer = { path = "./libs/rasterizer", features = ["glyph_brush_draw_cache"] }
+rasterizer = { path = "./libs/rasterizer", features = ["rusttype"] }
 fast_hash = { path = "../../../../../../../../fast_hash" }
 perf_viz = { path = "../../../../../../../../perf_viz" }
 if_changed = { path = "../../../../../../../../if_changed" }
