make a glutin_wrapper crate so that the glutin version is specified in exactly one place

--- a/libs/platform_layer/libs/wimp/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/Cargo.toml
@@ -17,12 +17,12 @@ if_changed = { path = "../../../if_changed" }
 perf_viz = { path = "../../../perf_viz" }
 perf_viz_proc_macro = { path = "../../../perf_viz/libs/perf_viz_proc_macro" }
 gl_layer = { path = "gl_layer" }
+glutin_wrapper = { path = "glutin_wrapper" }
 full_rusttype = { version = "0.7.5", features = ["gpu_cache"], package = "rusttype" }
 edited_storage = { path = "edited_storage" }
 shared = { path = "shared" }
 wimp_render = { path = "wimp_render" }
 wimp_types = { path = "wimp_types" }
-glutin = "0.24.0"
 spin_sleep = "0.3"
 clipboard = "0.5.0"
 directories = "2.0"
