--- a/libs/platform_layer/libs/wimp/wimp_types/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/wimp_types/Cargo.toml
@@ -13,8 +13,8 @@ macros = { path = "../../../../macros" }
 perf_viz = { path = "../../../../perf_viz" }
 platform_types = { path = "../../../../platform_types" }
 shared = { path = "../shared" }
+glutin_wrapper = { path = "../glutin_wrapper" }
 clipboard = "0.5.0"
-glutin = "0.24.0"
 
 [dev-dependencies]
 proptest = "0.10"
