add small test that tries to reproduce the bug, but find it passes?!

--- a/libs/platform_layer/libs/wimp/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/Cargo.toml
@@ -35,7 +35,7 @@ no-spinning-sleep = []
 skip-updating-editor-thread = []
 invariant-checking = ["wimp_render/invariant-checking"]
 time-render = ["gl_layer/time-render"]
-extra-prints = ["shared/extra-prints"]
+extra-prints = ["shared/extra-prints", "wimp_render/extra-prints"]
 print-raw-input = []
 
 [dev-dependencies]
