--- a/libs/platform_layer/libs/wimp/wimp_render/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/wimp_render/Cargo.toml
@@ -23,4 +23,5 @@ proptest = "0.10"
 [features]
 clip-debugging = []
 default = []
+extra-prints = []
 invariant-checking = ["macros/invariant-checking"]
