Use a Vec1 so we just don't need to care about the empty Vec case.

--- a/libs/editor/Cargo.toml
+++ b/libs/editor/Cargo.toml
@@ -45,6 +45,9 @@ path = "libs/search"
 [dependencies.text_buffer]
 path = "libs/text_buffer"
 
+[dependencies.vec1]
+path = "../vec1"
+
 [dev-dependencies]
 criterion = "0.2"
 proptest = "0.10"
