--- a/libs/platform_layer/libs/wimp/wimp_types/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/wimp_types/Cargo.toml
@@ -8,11 +8,13 @@ edition = "2021"
 path = "./src/wimp_types.rs"
 
 [dependencies]
+
 if_changed = { path = "../../../../if_changed" }
 macros = { path = "../../../../macros" }
 perf_viz = { path = "../../../../perf_viz" }
 platform_types = { path = "../../../../platform_types" }
 shared = { path = "../shared" }
+gl_layer = { path = "../gl_layer" }
 glutin_wrapper = { path = "../glutin_wrapper" }
 clipboard = "0.5.0"
 
