--- a/libs/platform_layer/libs/wimp/gl_layer/libs/open_gl/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/gl_layer/libs/open_gl/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 path = "./src/open_gl.rs"
 
 [dependencies]
-gl = "0.14"
+gl = { path = "../gl" }
 gl_layer_types = { path = "../gl_layer_types" }
 perf_viz = { path = "../../../../../../perf_viz" }
 macros = { path = "../../../../../../macros" }
