move examples, and get the hello-world example compiling

--- a/libs/platform_layer/libs/wimp/window_layer/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/window_layer/Cargo.toml
@@ -10,6 +10,11 @@ path = "src/window_layer.rs"
 gl_layer = { path = "../gl_layer" }
 glutin_wrapper = { path = "../glutin_wrapper" }
 
+[dev-dependencies]
+# for the example(s)
+spin_sleep = "0.3"
+platform_types = { path = "../../../../platform_types" }
+
 [features]
 default = []
 time-render = ["gl_layer/time-render"]
