--- a/libs/platform_layer/libs/wimp/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/Cargo.toml
@@ -16,8 +16,7 @@ macros = { path = "../../../macros" }
 if_changed = { path = "../../../if_changed" }
 perf_viz = { path = "../../../perf_viz" }
 perf_viz_proc_macro = { path = "../../../perf_viz/libs/perf_viz_proc_macro" }
-gl_layer = { path = "gl_layer" }
-glutin_wrapper = { path = "glutin_wrapper" }
+window_layer = { path = "window_layer" }
 full_rusttype = { version = "0.7.5", features = ["gpu_cache"], package = "rusttype" }
 edited_storage = { path = "edited_storage" }
 shared = { path = "shared" }
@@ -34,7 +33,7 @@ disable-fade-alpha = ["wimp_types/disable-fade-alpha"]
 no-spinning-sleep = []
 skip-updating-editor-thread = []
 invariant-checking = ["wimp_render/invariant-checking"]
-time-render = ["gl_layer/time-render"]
+time-render = ["window_layer/time-render"]
 extra-prints = ["shared/extra-prints", "wimp_render/extra-prints"]
 print-raw-input = []
 
