--- a/libs/platform_layer/libs/wimp/wimp_types/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/wimp_types/Cargo.toml
@@ -14,8 +14,7 @@ macros = { path = "../../../../macros" }
 perf_viz = { path = "../../../../perf_viz" }
 platform_types = { path = "../../../../platform_types" }
 shared = { path = "../shared" }
-gl_layer = { path = "../gl_layer" }
-glutin_wrapper = { path = "../glutin_wrapper" }
+window_layer = { path = "../window_layer" }
 clipboard = "0.5.0"
 
 [dev-dependencies]
