--- a/libs/platform_layer/libs/wimp/window_layer/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/window_layer/Cargo.toml
@@ -9,10 +9,11 @@ path = "src/window_layer.rs"
 [dependencies]
 gl_layer = { path = "../gl_layer" }
 glutin_wrapper = { path = "../glutin_wrapper" }
+screen_space = { path = "../../../../screen_space" }
 spin_sleep = "0.3"
 
 [dev-dependencies]
-# for the example(s)
+# for some of the examples
 platform_types = { path = "../../../../platform_types" }
 
 [features]
