--- a/libs/platform_layer/libs/wimp/wimp_render/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/wimp_render/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 path = "./src/wimp_render.rs"
 
 [dependencies]
-gl_layer = { path = "../gl_layer" }
+window_layer = { path = "../window_layer" }
 shared = { path = "../shared" }
 wimp_types = { path = "../wimp_types" }
 perf_viz = { path = "../../../../perf_viz" }
