--- a/libs/platform_layer/libs/wimp/window_layer/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/window_layer/Cargo.toml
@@ -9,6 +9,7 @@ path = "src/window_layer.rs"
 [dependencies]
 gl_layer = { path = "../gl_layer" }
 glutin_wrapper = { path = "../glutin_wrapper" }
+perf_viz = { path = "../../../../perf_viz" }
 screen_space = { path = "../../../../screen_space" }
 spin_sleep = "0.3"
 
