--- a/libs/platform_layer/libs/wimp/gl_layer/libs/open_gl/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/gl_layer/libs/open_gl/Cargo.toml
@@ -19,3 +19,4 @@ if_changed = { path = "../../../../../../if_changed" }
 # "time-render" is on by default.
 default = ["time-render"]
 time-render = []
+invariant-checking = []
