rearrange folders, mainly flattening folder nesting somewhat

--- a/libs/platform_layer/libs/edited_storage/Cargo.toml
+++ b/libs/platform_layer/libs/edited_storage/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 path = "./src/edited_storage.rs"
 
 [dependencies]
-platform_types = { path = "../../../../platform_types" }
-macros = { path = "../../../../macros" }
+platform_types = { path = "../../../platform_types" }
+macros = { path = "../../../macros" }
 wimp_types = { path = "../wimp_types" }
 rand = "0.7"
 
