--- a/libs/platform_layer/libs/wimp/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/Cargo.toml
@@ -16,12 +16,12 @@ macros = { path = "../../../macros" }
 if_changed = { path = "../../../if_changed" }
 perf_viz = { path = "../../../perf_viz" }
 perf_viz_proc_macro = { path = "../../../perf_viz/libs/perf_viz_proc_macro" }
-window_layer = { path = "window_layer" }
+window_layer = { path = "../window_layer" }
 full_rusttype = { version = "0.7.5", features = ["gpu_cache"], package = "rusttype" }
-edited_storage = { path = "edited_storage" }
-shared = { path = "shared" }
-wimp_render = { path = "wimp_render" }
-wimp_types = { path = "wimp_types" }
+edited_storage = { path = "../edited_storage" }
+shared = { path = "../shared" }
+wimp_render = { path = "../wimp_render" }
+wimp_types = { path = "../wimp_types" }
 spin_sleep = "0.3"
 directories = "2.0"
 atomicwrites = "0.3"
