--- a/libs/platform_layer/libs/wimp_render/Cargo.toml
+++ b/libs/platform_layer/libs/wimp_render/Cargo.toml
@@ -11,13 +11,13 @@ path = "./src/wimp_render.rs"
 window_layer = { path = "../window_layer" }
 shared = { path = "../shared" }
 wimp_types = { path = "../wimp_types" }
-perf_viz = { path = "../../../../perf_viz" }
-if_changed = { path = "../../../../if_changed" }
-platform_types = { path = "../../../../platform_types" }
-macros = { path = "../../../../macros" }
+perf_viz = { path = "../../../perf_viz" }
+if_changed = { path = "../../../if_changed" }
+platform_types = { path = "../../../platform_types" }
+macros = { path = "../../../macros" }
 
 [dev-dependencies]
-pub_arb_abs = { path = "../../../../pub_arb/abs" }
+pub_arb_abs = { path = "../../../pub_arb/abs" }
 proptest = "0.10"
 
 [features]
