--- a/libs/platform_layer/libs/wimp_types/Cargo.toml
+++ b/libs/platform_layer/libs/wimp_types/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2021"
 path = "./src/wimp_types.rs"
 
 [dependencies]
-if_changed = { path = "../../../../if_changed" }
-macros = { path = "../../../../macros" }
-perf_viz = { path = "../../../../perf_viz" }
-platform_types = { path = "../../../../platform_types" }
+if_changed = { path = "../../../if_changed" }
+macros = { path = "../../../macros" }
+perf_viz = { path = "../../../perf_viz" }
+platform_types = { path = "../../../platform_types" }
 shared = { path = "../shared" }
 window_layer = { path = "../window_layer" }
 clipboard = "0.5.0"
