--- a/libs/platform_layer/libs/window_layer/gl_layer/text_rendering/glyph-brush/Cargo.toml
+++ b/libs/platform_layer/libs/window_layer/gl_layer/text_rendering/glyph-brush/Cargo.toml
@@ -13,9 +13,9 @@ readme="README.md"
 path = "./src/glyph_brush.rs"
 
 [dependencies]
-#rasterizer = { path = "./libs/rasterizer", features = ["glyph_brush_draw_cache"] }
-rasterizer = { path = "./libs/rasterizer", features = ["rusttype"] }
-fast_hash = { path = "../../../../../../../../fast_hash" }
-perf_viz = { path = "../../../../../../../../perf_viz" }
-if_changed = { path = "../../../../../../../../if_changed" }
+#rasterizer = { path = "rasterizer", features = ["glyph_brush_draw_cache"] }
+rasterizer = { path = "rasterizer", features = ["rusttype"] }
+fast_hash = { path = "../../../../../../fast_hash" }
+perf_viz = { path = "../../../../../../perf_viz" }
+if_changed = { path = "../../../../../../if_changed" }
 
