--- a/libs/platform_layer/libs/window_layer/gl_layer/text_rendering/linebreak/Cargo.toml
+++ b/libs/platform_layer/libs/window_layer/gl_layer/text_rendering/linebreak/Cargo.toml
@@ -10,4 +10,4 @@ path = "./src/linebreak.rs"
 [dependencies]
 
 [dependencies.is_linebreak_char]
-path = "../../../../../../../../is_linebreak_char"
+path = "../../../../../../is_linebreak_char"
