--- a/libs/platform_layer/libs/window_layer/gl_layer/gl_layer_types/Cargo.toml
+++ b/libs/platform_layer/libs/window_layer/gl_layer/gl_layer_types/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2021"
 path = "./src/gl_layer_types.rs"
 
 [dependencies]
-macros = { path = "../../../../../../macros" }
-platform_types = { path = "../../../../../../platform_types" }
+macros = { path = "../../../../../macros" }
+platform_types = { path = "../../../../../platform_types" }
 
