--- a/libs/platform_layer/libs/window_layer/gl_layer/text_rendering/Cargo.toml
+++ b/libs/platform_layer/libs/window_layer/gl_layer/text_rendering/Cargo.toml
@@ -19,5 +19,6 @@ perf_viz = { path = "../../../../../perf_viz" }
 screen_space = { path = "../../../../../screen_space" }
 
 [dev-dependencies]
+ttf-parser = "0.15.0"
 proptest = "0.10"
 pub_arb_std = { path = "../../../../../pub_arb/std"}
