set edition = "2018 in clipboard

--- a/libs/clipboard/Cargo.toml
+++ b/libs/clipboard/Cargo.toml
@@ -6,6 +6,7 @@ description = "rust-clipboard is a cross-platform library for getting and settin
 repository = "https://github.com/aweinstock314/rust-clipboard"
 license = "MIT / Apache-2.0"
 keywords = ["clipboard"]
+edition = "2018"
 
 [target.'cfg(windows)'.dependencies]
 clipboard-win = "2.1"
