--- a/libs/clipboard/Cargo.toml
+++ b/libs/clipboard/Cargo.toml
@@ -8,6 +8,9 @@ license = "MIT / Apache-2.0"
 keywords = ["clipboard"]
 edition = "2018"
 
+[lib]
+path = "src/clipboard.rs"
+
 [target.'cfg(windows)'.dependencies]
 clipboard-win = "2.1"
 
